# py_prism

./: README.md  __init__.py  log.py  page_meta_class.py  pyproject.toml  section.py
src/py_prism/: element.py  elements.py  iframe.py  page.py  page_iframe.py  page_section.py  sections.py  support_method_generator.py
