[tool.poetry]
name = "py-prism"
version = "0.0.1"
description = "A Page Object Model DSL for Python, inspired by Ruby SitePrism"
readme = "README.md"
authors = ["Alexandr <ex3ml1troi+pyprism@outlook.com>"]
homepage = "https://github.com/l1tro1"
repository = "https://github.com/l1tro1/py_prism"
documentation = "https://github.com/l1tro1/py_prism/wiki"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.9.0"
uritemplate = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
readme_renderer = "^26.0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"